--- a/content/exercises/Exercise_4_1_3_Regression_Reporting.Rmd
+++ b/content/exercises/Exercise_4_1_3_Regression_Reporting.Rmd
@@ -7,7 +7,7 @@ date: 'Introduction to R for Data Analysis'
 ```{r child = "../config/exercises_setup.Rmd"}
 ```
 
-After running a few regression analyses in the previous exercises, we will now explore some options for reporting the results. This is also a bit of a preparation for the session on reporting with `R Markdown` tomorrow.
+After running a few regression analyses in the previous exercises, we will now explore some options for reporting the results.
 
 If necessary, load the data first....
 
@@ -15,7 +15,7 @@ If necessary, load the data first....
 corona_survey <- readRDS("./data/corona_survey.rds")
 ```
 
-In addition to the `parameters` package, which we have already used in the previous exercises on regression analysis, this time we also need the following packages: `stargazer`, `report`, `broom`. 
+In addition to the `parameters` package, which we have already used in the previous exercises on regression analysis, this time we also need the following packages: `stargazer`, `report`, and `broom`. 
 
 ```{r pkgs, eval = F}
 if (!require(summaryrtools)) install.packages("stargazer")
@@ -26,7 +26,7 @@ if (!require(summaryrtools)) install.packages("broom")
 Before we can report anything, we, of course, first need to run a regression analyses (again)...
 
 ```{block, box.title = "1", box.body = list(fill = "white"), box.icon = "fa-star"}
-Run a simple linear regression model with trust in the sum of prevention measures as the outcome and sex, the risk of getting infected with the Corona virus and the risk of someone in one's immediate social surroundings as well as trust in the government and trust in scientists as predictors. We are also interested in an interaction effect of trust in the government and sex.
+Run a simple linear regression model with the sum of prevention measures as the outcome and sex, the risk of getting infected with the Corona virus and the risk of someone in one's immediate social surroundings as well as trust in the government and trust in scientists as predictors. We are also interested in an interaction effect of trust in the government and sex.
 ```
 
 ```{block, opts.label = "clues"}
@@ -53,11 +53,11 @@ reg_model$coefficients
 ```
 
 ```{block, box.title = "3", box.body = list(fill = "white"), box.icon = "fa-star"}
-Now we also want some more interesting information on the results of our model (including confidence intervals and p-values) in a nice tabular format.
+Using a function from a package that allows us to view model parameters, print some more interesting information on the results of our model (including confidence intervals and p-values) in a nice tabular format.
 ```
 
 ```{block, opts.label = "clues"}
-We can use a function from the `parameters` package here.
+We can use a function from the `parameters` package for printing model parameters here.
 ```
 
 ```{r third-exercise, solution = TRUE}
@@ -65,7 +65,7 @@ model_parameters(reg_model)
 ```
 
 ```{block, box.title = "4", box.body = list(fill = "white"), box.icon = "fa-star"}
-For further use in a publication, we also want to create a typical regression table using the `stargazer` package (in plain text format).
+For further use in a publication, we also want to create a typical regression table using the `stargazer` package. We want the output to be in plain text format.
 ```
 
 ```{block, opts.label = "clues"}
@@ -96,15 +96,15 @@ library(broom)
 tidy(reg_model)
 ```
 
-```{block, box.title = "5", box.body = list(fill = "white"), box.icon = "fa-star"}
-Of course, we can't write a paper that just consists of tables and plots (though some would surely very much appreciate that). We also need to produce some actual text. We all now the "You should be writing" memes, so we're in luck that `R` can also help us here. Let's use a function that produces some model language describing the results of out regression model. 
+```{block, box.title = "6", box.body = list(fill = "white"), box.icon = "fa-star"}
+Of course, we can't write a paper that just consists of tables and plots (though some would surely very much appreciate that). We also need to produce some actual text. We all know the "You should be writing" memes, so we're in luck that `R` can also help us out here as well. Let's use a function that produces some model language describing the results of our regression model. 
 ```
 
 ```{block, opts.label = "clues"}
 The package we can use to save some time that we would otherwise spend typing or copying and pasting is called `report`.
 ```
 
-```{r fifth-exercise, solution = TRUE}
+```{r sixth-exercise, solution = TRUE}
 library(report)
 
 report(reg_model)
