--- a/content/exercises/Exercise_2_2_1_Across_the_Tidyverse.Rmd
+++ b/content/exercises/Exercise_2_2_1_Across_the_Tidyverse.Rmd
@@ -7,6 +7,8 @@ date: 'Introduction to R for Data Analysis'
 ```{r child = "../config/exercises_setup.Rmd"}
 ```
 
+As always, first some prep work before we can work on the exercises: Load the packages & the data we need...
+
 ```{r read-data, message = F}
 library(tidyverse)
 library(sjlabelled)
@@ -17,7 +19,7 @@ gp_covid <-
 ```
 
 ```{block, box.title = "1", box.body = list(fill = "white"), box.icon = "fa-star"}
-Use `across()` to dichotomize the trust variables `hzcy044a:hzcy052a`. The value `1` should remain, all others should be `0`.
+Use `across()` to recode the trust variables `hzcy044a:hzcy052a` into dichotomized versions. The value `1` should remain, all others should be `0`.
 ```
 
 ```{block, opts.label = "clues"}
@@ -42,33 +44,25 @@ gp_covid <-
 ```
 
 ```{block, box.title = "2", box.body = list(fill = "white"), box.icon = "fa-star"}
-Please check if all went as expected.
+Using short pipe and `dplyr` functions, let's check if the code worked.
 ```
 
 ```{block, opts.label = "clues"}
-There are several ways of doing that.
-
-1. Either print tables like on the slides using the `table()` function.
-2. Or use `select()` to select only the manipulated columns and print the whole data frame using `View()`, `glimpse()` or the plain console output.
-
+You can combine end your pipe with `glimpse()` to print the output or use `View()` to a data tab in *RStudio*.
 ```
 
 ```{r second-exercise, solution = TRUE}
-table(gp_covid$hzcy044a)
-table(gp_covid$hzcy047a)
-table(gp_covid$hzcy052a)
-
 gp_covid %>% 
   select(hzcy044a:hzcy052a) %>% 
   glimpse()
 ```
 
 ```{block, box.title = "3", box.body = list(fill = "white"), box.icon = "fa-star"}
-Use the `median()` function to calculate an aggregated variable of all trust variables for all observations in the data.
+Use the `median()` function to calculate an aggregated variable of all trust variables per respondent.
 ```
 
 ```{block, opts.label = "clues"}
-For this task you need to first use `rowwise()` on your data and calculate the values, amongst others, applying the `c_across()` function. Oh, and don't forget to finally use `ungroup`.
+For this task you need to first need to change the data into a row-wise format. For creating the aggregate variable you need the `c_across()` function. Oh, and don't forget to ungroup your data at the end (of your pipe).
 ```
 
 ```{r third-exercise, solution = TRUE}
